@@ -108,6 +108,22 @@ name|common
 operator|.
 name|cloud
 operator|.
+name|ClosableThread
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|cloud
+operator|.
 name|ClusterState
 import|;
 end_import
@@ -361,6 +377,8 @@ class|class
 name|OverseerCollectionProcessor
 implements|implements
 name|Runnable
+implements|,
+name|ClosableThread
 block|{
 DECL|field|NUM_SLICES
 specifier|public
@@ -2284,6 +2302,18 @@ throw|throw
 name|ex
 throw|;
 block|}
+block|}
+annotation|@
+name|Override
+DECL|method|isClosed
+specifier|public
+name|boolean
+name|isClosed
+parameter_list|()
+block|{
+return|return
+name|isClosed
+return|;
 block|}
 block|}
 end_class
